# momentum

./: .gitignore  Cargo.toml  README.md  log4rs.yml  output.csv  plot_backtest.py
src/: backtest.rs  consts.rs  hypertune.rs  lib.rs  main.rs  strategy.rs  types.rs  utils.rs
src/binance/: api.rs  mod.rs  parser.rs
