[package]
name = "momentum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = "0.4.23"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1.6"
futures = "0.3"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.0"
log4rs = "1.2.0"
mongodb = "2.3.1"
rand = "0.8.5"
reqwest = "0.11.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.90"
sha2 = "0.10.6"
simplelog = { version = "^0.11.0", features = ["paris"] }
# trade_utils = { git = "https://github.com/karta134033/trade_utils.git", branch = "master" }
trade_utils = { path = "../trade_utils" }
